2017-06-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/81154
	* g++.dg/gomp/pr81154.C: New test.

	Backported from mainline
	2017-06-20  Jakub Jelinek  <jakub@redhat.com>

	PR target/81121
	* gcc.target/i386/pr81121.c: New test.

	2017-06-19  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/81125
	* g++.dg/ubsan/pr81125.C: New test.

	PR sanitizer/81111
	* g++.dg/ubsan/pr81111.C: New test.

	2017-06-13  Jakub Jelinek  <jakub@redhat.com>

	PR c++/80973
	* g++.dg/ubsan/pr80973.C: New test.

	PR c++/80984
	* g++.dg/opt/nrv18.C: New test.

2017-06-19  James Greenhalgh  <james.greenhalgh@arm.com>

	Backport from mainline
	2017-06-19  James Greenhalgh  <james.greenhalgh@arm.com>

	PR target/71778
	* gcc.target/arm/pr71778.c: New.

2017-06-14  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/sparc/overflow-4.c: Add -mno-vis3.

2017-06-09  Janus Weil  <janus@gcc.gnu.org>

	Backport from trunk
	PR fortran/70601
	* gfortran.dg/proc_ptr_comp_50.f90: New test.

2017-06-08  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81015
	* gcc.target/i386/pr59874-1.c (foo): Call __builtin_ctzs.
	* gcc.target/i386/pr59874-2.c (foo): Call __builtin_clzs.
	* gcc.target/i386/pr81015.c: New test.

2017-06-08  Jakub Jelinek  <jakub@redhat.com>

	PR c/81006
	* c-c++-common/gomp/pr81006.c: New test.

	PR c++/81011
	* g++.dg/gomp/pr81011.C: New test.

2017-06-07  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2017-05-02  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80549
	* gcc.dg/torture/pr80549.c: New testcase.

	2017-05-19  Richard Biener  <rguenther@suse.de>

	PR c++/80593
	* g++.dg/warn/Wstrict-aliasing-bogus-char-2.C: New testcase.
	* g++.dg/warn/Wstrict-aliasing-6.C: Adjust expected outcome.

	2017-05-26  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80842
	* gcc.dg/torture/pr80842.c: New testcase.

	2017-05-31  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80906
	* gcc.dg/graphite/pr80906.c: New testcase.
